Fix misaligned menu layout

--- a/src/common-styles.css
+++ b/src/common-styles.css
@@ -27,7 +27,7 @@ body {
     justify-content: flex-start;
     align-items: center;
     gap: 40px;
-    padding: 15px 35px;
+    padding: 15px 35px 0px 15px;
     background-color: #F0EDE5;
     height: 80px;
     width: 100%;
@@ -37,6 +37,7 @@ body {
 
 .logo {
     height: 80px;
+    margin-bottom: 10px;
 }
 
 .menu-bar {
@@ -56,8 +57,8 @@ body {
 }
 
 .selected {
-    position: relative;
-    top: 15px;
+    /* position: relative;
+    top: 15px; */
     background-color: #395738;
     color: #F0EDE5;
 }
